--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,5 +52,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
      <!-- 允许程序读取或写入系统设置 -->
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
